--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="gallery">
                 <img src="images/photo1.jpg" alt="生活照 1" loading="lazy">
                 <img src="images/photo2.jpg" alt="生活照 2" loading="lazy">
-                </div>
-            <p data-i18n="gallery_caption">這是我的部分生活照片。請將此處的佔位圖片替換成您在越南或台灣的生活照！</p>
+            </div>
+            <p data-i18n="gallery_caption">這是我的部分生活照片。</p>
         </section>
 
     </main>
