--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="container">
         <section class="profile-card">
             <img src="images/profile.jpg" alt="冒文進個人照片" class="profile-photo">
-            <h1 data-i18n="name">冒文進 (Mao Van Jin)</h1>
+            <h1 data-i18n="name">冒文進 (Mào Văn Tiến)</h1>
             <p class="student-id">
                 <span data-i18n="student_id_label">學號:</span> 
                 <span id="student-id-value">114011145</span> 
@@ -53,6 +53,8 @@
             <div class="gallery">
                 <img src="images/photo1.jpg" alt="生活照 1" loading="lazy">
                 <img src="images/photo2.jpg" alt="生活照 2" loading="lazy">
+                <img src="images/photo3.jpg" alt="生活照 3" loading="lazy">
+                <img src="images/photo4.jpg" alt="生活照 4" loading="lazy">
             </div>
             <p data-i18n="gallery_caption">這是我的部分生活照片。</p>
         </section>
