新增大事紀

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <p data-i18n="gallery_caption">這是我的部分生活照片。</p>
         </section>
 
+        <section class="section">
+            <h2 data-i18n="milestones_title">大事紀錄 (里程碑)</h2>
+            <div class="timeline" id="timeline-container">
+                </div>
+        </section>
+
     </main>
 
     <footer class="footer">
