--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button id="copy-id-btn" aria-label="複製學號"><i class="fas fa-copy"></i></button>
                 <span id="copy-message" class="copy-message"></span>
             </p>
-            <p data-i18n="current_status">來自越南的留學生，目前就讀亞洲科技大學 (Asia University of Science and Technology) 於台中。</p>
+            <p data-i18n="current_status">來自越南的留學生，目前就讀台中的亞洲大學 (Asia University)</p>
         </section>
 
         <section class="section">
